# NEO_JAX

./: .gitignore  PLAN.md  README.md  pyproject.toml
.github/workflows/: ci.yml
benchmarks/: benchmark_ncsx.py  benchmark_orbits.py  benchmark_vmec_boozer_pipeline.py  ci_perf_check.py  profile_run.py  profile_vmec_boozer_pipeline.py
docs/: api.rst  cli.rst  conf.py  differentiability.rst  fortran_map.rst  index.rst  installation.rst  numerics.rst  overview.rst  performance.rst  quickstart.rst  references.rst  refs.bib  theory.rst  tutorials_ncsx.rst  tutorials_orbits.rst  user_api.rst  validation.rst  vmec_boozer.rst
examples/: epsilon_effective_scale_optimization.py  ncsx_autodiff_Rmajor_optimization.py  ncsx_autodiff_opt.py  ncsx_autodiff_rt0_optimization.py  ncsx_epsilon_effective_plot.py  ncsx_jit_run.py  qh_epsilon_effective_aspect_optimization.py  vmec_boozer_neo_pipeline.py
neo_jax/: __init__.py  __main__.py  api.py  cli.py  config.py  control.py  current.py  data_models.py  driver.py  examples.py  fourier.py  geometry.py  grids.py  integrate.py  io.py  legacy.py  pipeline.py  plotting.py  results.py  splines.py  surface.py  workflow.py
tests/: conftest.py
tests/integration/: test_grad_pipeline.py  test_pipeline_builder.py
tests/regression/: test_cli_legacy.py  test_fourier_orbits.py  test_gpu_smoke.py  test_landreman_qa_lowres_parity.py  test_ncsx_parity.py  test_orbits_parity.py  test_surface_orbits.py
tests/unit/: test_api.py  test_control.py  test_data_models.py  test_flint_bo_jax_smoke.py  test_flint_bo_smoke.py  test_geometry.py  (+6 more)
(+18 files in other folders)
